homework_10/app/svc_cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - port: 80
      targetPort: 80
