homework_10/app/deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-network-policy
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
